--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Bulletproof React Application" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
 
-    <title>Bulletproof React</title>
+    <title>Link Sharing App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
